# auto-learning-system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
.ai/: PRD.md
.claude/: settings.local.json
>message:/mnt/d/work/ai_learning_system/tests/: test_opencli_crawler.py
data/: cache.db
docs/: CHANGELOG.md  PRD.md
docs/superpowers/plans/: 2026-03-30-auto-learning-system.md  2026-03-30-url-recursive-crawl-implementation.md  2026-03-31-full-web-content-export-impl.md
docs/superpowers/specs/: 2026-03-30-auto-learning-system-design.md  2026-03-30-url-recursive-crawl-design.md  2026-03-31-full-web-content-export-design.md
src/: __init__.py  cache.py  chunker.py  cli.py  config.py  models.py  pipeline.py  summarizer.py
src/api/: __init__.py
src/auto_learning_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crawler/: __init__.py  crawl4ai.py  opencli.py
src/exporter/: __init__.py
src/llm/: __init__.py
src/utils/: __init__.py  translate.py
tests/: test_cache.py  test_chunker.py  test_config.py  test_crawler.py  test_exporter.py  test_link_relationships.py  test_llm.py  test_models.py  test_opencli_crawler.py  test_summarizer.py
